tests/baselines/reference/primitiveConstraints1.errors.txt
tests/cases/compiler/primitiveConstraints1.ts(2,6): error TS2344: Type '文字' does not satisfy the constraint '数字'.
tests/cases/compiler/primitiveConstraints1.ts(5,14): error TS2344: Type '文字' does not satisfy the constraint '数字'.


==== tests/cases/compiler/primitiveConstraints1.ts (2 errors) ====
    function foo1<T extends U, U>(t: T, u: U) { }
    foo1<string, number>('hm', 1); // no error
         ~~~~~~
!!! error TS2344: Type '文字' does not satisfy the constraint '数字'.
     
    function foo2<T, U extends T>(t: T, u: U) { }
    foo2<number, string>(1, 'hm'); // error
                 ~~~~~~
!!! error TS2344: Type '文字' does not satisfy the constraint '数字'.
    